# finm32700

class_exercises/: participation_1.cpp  session2.cpp  session3.cpp
hw1/: README.md  hw1.cpp
hw2/: README.md  hw2.cpp  output.txt
hw3/: REPORT.md  task1.cpp
hw4/: CMakeLists.txt  README.md
hw4/include/: OrderBookBuffer.hpp  StaticVector.hpp  constexpr_math.hpp  generic_algorithms.hpp  metaprogramming.hpp
hw4/src/: main.cpp
hw5/: CMakeLists.txt  compile_commands.json  writeup.md
hw5/benchmarks/: hash_table_benchmark.cpp  run_benchmarks.cpp
hw5/include/hw5/: benchmarks.hpp  order_book.hpp  order_priority_queue.hpp  robin_hood_hash_table.hpp  time_series_processor.hpp
hw5/src/: benchmarks.cpp  order_book.cpp  order_priority_queue.cpp  robin_hood_hash_table.cpp  time_series_processor.cpp
phase1/: .gitignore  Makefile  README.md  REPORT.md  benchmark.cpp  benchmark_blocked.cpp  benchmark_cache.cpp  benchmark_optimization.cpp  matrix_operations.cpp  matrix_operations.h  matrix_operations_optimized.cpp  matrix_operations_optimized.h  phase1.md  profile.cpp  tests.cpp
phase2/: hft_client  hft_client.cpp  hft_server  hft_server.cpp  strategy.md
phase3/: INSTRUCTIONS.md  README.md  feed_parser.cpp  feed_parser.h  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  phase3_trader  sample_feed.txt
phase4/: assignment.md
phase4/phase4/: CMakeLists.txt  README.md  demo.mov  trades.csv
phase4/phase4/docs/: BenchmarkReport.md  PerformanceAnalysis.md  SystemArchitecture.md
phase4/phase4/include/: MarketData.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
phase4/phase4/src/: MarketData.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
phase4/phase4/test/: test_latency.cpp
phase5/: CMakeLists.txt  README.md  REPORT.md  performance_data.csv  performance_data_optimized.csv  performance_data_unoptimized.csv  plot_performance.py
phase5/include/: optimized_order_book.hpp  order_book.hpp
phase5/src/: benchmark.cpp
phase5/tests/: unit_tests.cpp
